# media-catalog-books

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  scripts_clean_prompt_echo.sql
scripts/: db_maintenance.py  init_db.py
src/: __init__.py
src/backend/: clients.py  config.py  database.py  language_codes.py  main.py  normalizers.py
src/backend/schemas/: core_books.py  ingest.py  review.py  workflow.py
src/backend/services/: books.py  catalog.py  covers.py  export.py  metadata.py  ocr.py  workflow.py
src/backend/workflow/: __init__.py  graph.py
src/frontend/: app.py  utils.py
src/frontend/assets/: catalog_form_access.css  theme.css  theme_legacy.css
src/frontend/pages/: 00_extraccion.py  00_orquestacion.py  01_ingesta.py  01_orquestacion.py  02_revision_manual.py  03_ejecucion_por_etapa.py  03_formulario.py  04_exportacion.py  05_catalogacion_final.py
src/media_catalog_books.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
