[project]
name = "media-catalog-books"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn",
  "streamlit",
  "duckdb",
  "requests",
  "ollama",
  "pillow",
  "pillow-heif",
  "openai",
  "langgraph"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
