[project]
name = "media-catalog-books"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
  "fastapi",
  "uvicorn",
  "streamlit",
  "duckdb",
  "requests",
  "ollama>=0.6",
  "pillow",
  "pillow-heif",
  "openai",
  "langgraph",
  "langcodes",
  "iso639"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "black"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
